  + New Clone/BeginClone/CloneAsync overloads with blendingMode parameter.
+ BitmapDataFactory class:
  + New CreateBitmapData overloads with blendingMode parameter.
+ ColorExtensions class:
  + New Blend overload
+ New ColorSpaceHelper class
+ PredefinedColorsQuantizer class:
  + New ConfigureBlendingMode method
+ OptimizedColorsQuantizer class:
  + New ConfigureBlendingMode method
* Palette class:
  + New constructor overloads with IEnumerable<Color32> parameter instead of an array.
  + New constructor and factory method overloads with useLinearBlending parameters.
  - The constructor with Color32[] parameter just used to store the specified array. This made possible to corrupt
    the palette if the array elements were changed after creating the palette. From now on the elements are copied
    into a new storage.


~~~~~~~~~
! v7.0.0:
~~~~~~~~~

NOTE: This is the first version of KGySoft.Drawing.Core but as it was extracted from the KGySoft.Drawing library the
changes are compared to KGySoft.Drawing v6.3.2. Breaking changes can be interpreted as an upgrade from that library.

! Assembly changes:
===================
! System.Drawing.Common package is no longer referenced (.NET Core/Standard 2.0 and above). To use APIs that depend
  on System.Drawing.Common (eg. Image, Bitmap, Icon, Metafile, etc.) reference the KGySoft.Drawing package.

! KGySoft.Drawing namespace
===========================
! The IDrawingProgress interface has been removed. It is replaced by KGySoft.Threading.IAsyncProgress from the
  KGySoft.CoreLibraries assembly.
! The DrawingProgress struct has been removed. It is replaced by KGySoft.Threading.AsyncProgress<T> from the
  KGySoft.CoreLibraries assembly.
! The AsyncConfigBase, AsyncConfig and TaskConfig classes and the IAsyncContext interface have been replaced by the
  identically named types from the KGySoft.Threading namespace in the KGySoft.CoreLibraries assembly.

! KGySoft.Drawing.Imaging namespace
===================================